resources/assets/css/styles.css
* {
  margin: 0;
  padding: 0;
}

html {
  font-size: 16px;
}

/* Header  */
header {
  display: flex;
  flex-direction: column;
  background-color: white;
  align-items: center;
  width: 100vw;
  height: 126px;
  position: fixed;
  padding-top: 10px;
  z-index: 1;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

header .logo {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

header .logo p {
  text-align: center;
  flex-grow: 3;
  font-family: 'Whisper', cursive;
  font-size: 3rem;
  font-weight: 600;
}

header .logo a {
  text-align: center;
  background-color: rgba(248, 140, 196,.4);
  width: 0;
  border-radius: 32rem;
  padding: 12px 36px 12px 36px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  color: white;
  font-size: large;
  font-family: 'Noto Sans Linear A';
}

header nav ul {
  display: flex;
  flex-direction: row;
  align-items: last;
  list-style-type: none;
}

header nav li{
  padding: 1rem 2rem 1rem 1rem;
  font-family: 'Montserrat', sans-serif;
  font-weight: 500;
}

nav li a {
  text-decoration: none;
  text-align: center;
  width: auto;
  color: rgb(91, 91, 91);
}

nav li a:hover {
  color: rgb(145, 114, 72);
}

@media only screen and (min-width: 769px) {
  header .logo a {
    display: none;
  }
}

@media screen and (max-width: 768px) {
  header {
    height: auto;
  }

  header .logo p{
    text-align: left;
    padding-left: 10%;
    font-size: 2rem;
  }

  header .logo a{
    flex-grow: 1;
    flex-shrink: 1;
    width: auto;
    margin-right: 3rem;
    font-size: 1rem;
  }

  header nav ul {
    width: 100vw;
    justify-content: space-evenly;
  }
}

@media screen and (max-width: 460px){
  header {
    height: auto;
  }

  header .logo p {
    padding: 0;
    text-align: center;
  }

  header .logo a {
    display: none;
  }

  header nav ul {
    gap: .5rem;
  }

  header nav li {
    margin-top: 1rem;
    padding: 2px 0px 1rem 0px;
  }

}


/* Hero Section */
#hero {
  padding-top: 126px;
}

#hero .container {
  background-image: url("/resources/assets/img/cosmetic-metal.avif");
  height: 38rem;
  background-position: center;
  background-repeat: no-repeat;
  background-color: rgb(227, 192, 191);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

#hero .container .prompt {
  display: flex;
  flex-direction: column;
  background-color: rgba(226, 192, 191, 0.5);
  width: 78rem;
  justify-content: center;
  align-items: center;
  padding: 7rem 0rem 7rem 0rem;
}

#hero .prompt h2 {
  font-family: 'Noto Sans Linear A', sans-serif;
  font-size: 3rem;
  color: white;
}

#hero .prompt p {
  font-family: 'Montserrat', sans-serif;
  font-size: 2rem;
  margin-top: 1rem;
  margin-bottom: 3rem;
  color: #f0f0f0;
}

#hero .prompt a {
  background-color: rgba(248, 140, 196,.4);
  width: 245px;
  border-radius: 32rem;
  padding: 12px 36px 12px 36px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  color: white;
  font-size: large;
  font-family: 'Noto Sans Linear A';
}

@media screen and (max-width: 768px) {
  #hero {
    padding-top: 98px;
  }

  #hero .container {
    height: 27rem;
  }
  
  #hero .container h2 {
    text-align: center;
    font-size: 2.25rem;
  }

  #hero .container p {
    text-align: center;
    font-size: 1.25rem;
  }

  #hero .container a {
    display: none;
  }
}


@media screen and (max-width: 460px){
  #hero .container h2 {
    text-align: center;
    padding: 0rem 3rem 0rem 3rem;
    font-size: 1.725rem;
  }

  #hero .container p {
    text-align: center;
    padding: 0rem 3rem 0rem 3rem;
    font-size: 1rem;
  }

  #hero .container a {
    display: block;
  }
}

/* Our Value */
#our-value .info {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100vw;
}

.yellow {
  background-color: #FAECCB;
  transition-property: background-color;
  transition-duration: .124s;
  transition-timing-function: ease-in;
}

.yellow:hover {
  background-color: #feda84;
}

.green {
  background-color: #C9E4DE;
  transition-property: background-color;
  transition-duration: .124s;
  transition-timing-function: ease-in;
}

.green:hover {
  background-color: #96e3d3;
}

.purple {
  background-color: #DBCCEF;
  transition-property: background-color;
  transition-duration: .124s;
  transition-timing-function: ease-in;
}

.purple:hover {
  background-color: #d4b8f8;
}

.info .card {
  width: 0;
  flex-grow: 1;
  height: 230px;
  padding: 3rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.info .card img {
  width: 5rem;
  height: auto;
}

.info .card h3 {
  text-align: center;
  font-family: 'Montserrat', sans-serif;
  margin-bottom: 1rem;
  font-size: 2rem;
}

.info .card p {
  text-align: center;
  font-family: 'Lustria', sans-serif;
  padding: 0 1rem 2rem 1rem;
}

.info .main {
  flex-grow: 1;
}


@media screen and (max-width: 768px) {
  #our-value .info {
    width: 100vw;
    flex-direction: row;
    flex-wrap: wrap;
  }

  .info .card {
    flex-grow: 1;
    flex-shrink: 1;
  }

  #our-value .info .main {
    flex-grow: 3;
    flex-shrink: 3;
    min-width: fit-content;
  }
}

@media screen and (max-width: 460px){
  .info .card {
    width: auto;
    padding: 1rem;
  }
}

/* About US */
#about-us {
  display: flex;
  flex-direction: row;
  padding: 2rem 6rem 2rem 6rem;
}

#about-us .image {
  flex-grow: 1;
}

#about-us .image img {
  width: 100%;
}

#about-us .about {
  flex-grow: 2;
}

#about-us .about h2 {
  padding: 2rem 2rem 0 2rem;
  font-family: 'Montserrat', sans-serif;
}

#about-us .about p {
  padding: 1rem 2rem 2rem 2rem;
  font-family: 'Lustria', sans-serif;
}

#about-us .vision {
  display: flex;
}

#about-us .vision .card h3 {
  margin: 1rem 0rem 0rem 2rem;
  width: auto;
  text-align: center;
  font-family: 'Lustria', sans-serif;
}

#about-us .vision .card p {
  text-align: center;
  font-family: 'Lustria', sans-serif;
}

@media screen and (max-width: 768px) {

  #about-us { 
    padding: 0px;
  }


  #about-us .image {
    min-width: 12rem;
    flex-grow: 3;
    flex-shrink: 3;
    width: 0;
    min-width: 12rem;
  }

  #about-us .image img {
    object-fit: cover;
    overflow: hidden;
    width: 100%;
    height: 100%;
  }

  #about-us .about {
    width: 0;
  }

  #about-us .about .vision {
    flex-direction: column;
  }

  #about-us .about .vision h3 {
    text-align: left;
  }

  #about-us .about .vision p {
    text-align: left;
  }
}

@media screen and (max-width: 460px){
  #about-us .image { 
    display: none;
  }
}

/* Brands Section */
#brands {
  background-color: rgb(243, 243, 243);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#brands h2 {
  font-family: 'Noto Sans Linear A', sans-serif;
  margin-top: 2rem;
  font-weight: bold;
  font-size: 2rem;
  color: rgb(59, 59, 59);
}

#brands .showlist {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 2rem;
  width: 100%;
  padding-top: 3rem;
  padding-bottom: 3rem;
  justify-content: center;
  align-content: space-between;
}

#brands .showlist img {
  width: 180px;
  height: auto;
  opacity: 1;
  filter: grayscale(100%);
  object-fit: contain;
  mix-blend-mode: multiply;
}

@media screen and (min-width: 768px) {
  #brands .showlist img {
    width: 90px;
  }
}


@media screen and (max-width: 460px){
  #brands .showlist {
    width: auto;
    padding-left: 3rem;
    padding-right: 3rem;
  }
  #brands .showlist img {
    width: 5rem;
  }
}

footer {
  background-color: gray;
  padding: 3rem;
  color: lightgray;
  font-family: 'Lustria', sans-serif;
}

footer p {
  text-align: center;
}

